Simplified Permission check